--- a/index.html
+++ b/index.html
@@ -12,16 +12,15 @@
   <title>Wonders of the World</title>
 </head>
 <body>
-  <div id="carusel" class="carusel">
-    <div id="slides-container" class="slides">
-    <div class="slider active" style="background-image:url(assets/img/machu-pikchu-peru.jpg);">q
-    <a href="#"></a></div>
-    <div class="slider active" style="background-image:url(assets/img/mavzoley-tadzh-mahal.jpg);"></div>
-    <div class="slider active" style="background-image:url(assets/img/original.jpg);"></div>
-    <div class="slider active" style="background-image:url(assets/img/petra.jpg);"></div>
-    <div class="slider active" style="background-image:url(assets/img/rimskiy-kolizey.jpg);"></div>
-    <div class="slider active" style="background-image:url(assets/img/statuya-hrista-spasitelya.jpg);"></div>
-    <div class="slider active" style="background-image:url(assets/img/velikaya-kitayskaya-stena.jpg);"></div>
+  <div id="carousel" class="carousel">
+    <div id="slides" class="slides">
+    <div class="slide active" style="background-image:url(assets/img/machu-pikchu-peru.jpg);"></div>
+    <div class="slide" style="background-image:url(assets/img/mavzoley-tadzh-mahal.jpg);"></div>
+    <div class="slide" style="background-image:url(assets/img/original.jpg);"></div>
+    <div class="slide" style="background-image:url(assets/img/petra.jpg);"></div>
+    <div class="slide" style="background-image:url(assets/img/rimskiy-kolizey.jpg);"></div>
+    <div class="slide" style="background-image:url(assets/img/statuya-hrista-spasitelya.jpg);"></div>
+    <div class="slide" style="background-image:url(assets/img/velikaya-kitayskaya-stena.jpg);"></div>
     </div>
   </div>
   <div class="controls">
@@ -37,15 +36,15 @@
   </div>
   <ol class="indicators">
     <li class="indicator active" data-slider-to="1"></li>
-    <li class="indicator active" data-slider-to="2"></li>
-    <li class="indicator active" data-slider-to="3"></li>
-    <li class="indicator active" data-slider-to="4"></li>
-    <li class="indicator active" data-slider-to="5"></li>
-    <li class="indicator active" data-slider-to="6"></li>
-    <li class="indicator active" data-slider-to="7"></li>
+    <li class="indicator" data-slider-to="2"></li>
+    <li class="indicator" data-slider-to="3"></li>
+    <li class="indicator" data-slider-to="4"></li>
+    <li class="indicator" data-slider-to="5"></li>
+    <li class="indicator" data-slider-to="6"></li>
+    <li class="indicator" data-slider-to="7"></li>
   </ol>
 
-  <!-- <script src="libs/jquery/dist/jquery.min.js"></script> -->
+  <script src="libs/jquery/dist/jquery.min.js"></script>
   <script src="assets/js/main.js"></script>
 </body>
 </html>
