--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
     </div>
   </div>
   <div class="controls">
-    <span id="pause-btn" class="control-pause">
-      <i class="far fa-play-circle"></i>
+    <span id="pause" class="control-pause">
+      <i class="far fa-pause-circle"></i>
     </span>
-    <span id="prev-btn" class="control-prev">
+    <span id="prev" class="control-prev">
       <i class="fas fa-angle-left"></i>
     </span>
-    <span id="next-btn" class="control-next">
+    <span id="next" class="control-next">
       <i class="fas fa-angle-right"></i>
     </span>
   </div>
