--- a/index.html
+++ b/index.html
@@ -14,13 +14,27 @@
 <body>
   <div id="carousel" class="carousel">
     <div id="slides" class="slides">
-    <div class="slide active" style="background-image:url(assets/img/machu-pikchu-peru.jpg);"></div>
-    <div class="slide" style="background-image:url(assets/img/mavzoley-tadzh-mahal.jpg);"></div>
-    <div class="slide" style="background-image:url(assets/img/original.jpg);"></div>
-    <div class="slide" style="background-image:url(assets/img/petra.jpg);"></div>
-    <div class="slide" style="background-image:url(assets/img/rimskiy-kolizey.jpg);"></div>
-    <div class="slide" style="background-image:url(assets/img/statuya-hrista-spasitelya.jpg);"></div>
-    <div class="slide" style="background-image:url(assets/img/velikaya-kitayskaya-stena.jpg);"></div>
+    <div class="slide active" style="background-image:url(assets/img/machu-pikchu-peru.jpg);">
+      <h1 class="slide-title">The Lost Inca City Machu Picchu</h1>
+    </div>
+    <div class="slide" style="background-image:url(assets/img/mavzoley-tadzh-mahal.jpg);">
+      <h1 class="slide-title">Taj Mahal Mausoleum in Agra</h1>
+    </div>
+    <div class="slide" style="background-image:url(assets/img/original.jpg);">
+      <h1 class="slide-title">The ancient city of Chichen Itza</h1>
+    </div>
+    <div class="slide" style="background-image:url(assets/img/petra.jpg);">
+      <h1 class="slide-title">Ancient Petra</h1>
+    </div>
+    <div class="slide" style="background-image:url(assets/img/rimskiy-kolizey.jpg);">
+      <h1 class="slide-title">Colosseum in Rome</h1>
+    </div>
+    <div class="slide" style="background-image:url(assets/img/statuya-hrista-spasitelya.jpg);">
+      <h1 class="slide-title">Statue of Christ the Redeemer</h1>
+    </div>
+    <div class="slide" style="background-image:url(assets/img/velikaya-kitayskaya-stena.jpg);">
+      <h1 class="slide-title">Great Wall of China</h1>
+    </div>
     </div>
   </div>
   <div class="controls">
